:lipstick: 연동에 따른 스타일 변경

--- a/frontend/src/css/Business.css
+++ b/frontend/src/css/Business.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+.box-business .inner-business{
+    flex-basis: 84%;
+}
+
 .tb-business-list {
     width: 90%;
     margin: 40px auto 0 auto;
@@ -9,6 +13,9 @@
 
 .tb-business-list .tr-business-list .th-business-list {
     background-color: var(--gray-color);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; 
     
 }
 
@@ -20,13 +27,14 @@
 }
 
 .tb-business-list .tr-business-list .business-id {
-    width: 2rem;
+    width: 4rem;
 }
 
 .tb-business-list .tr-business-list .business-title {
-    max-width: 10rem;
+    max-width: 20rem;
+    cursor: pointer;
 }
 
 .tb-business-list .tr-business-list .business-writer-id {
-    max-width: 6rem;
+    max-width: 8rem;
 }
