--- a/frontend/src/css/SideBar.css
+++ b/frontend/src/css/SideBar.css
@@ -1,8 +1,8 @@
 .box-sidebar {
     height: 100%;
     min-height: 100vh;
-    width: 16vw;
     background-color: var(--base-color);
+    flex-basis: 16%;
     /*padding: 2rem;*/
 }
 
